# cairo-debugger

./: .gitignore  Cargo.toml  README.md  detailed_roadmap.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
resources/: detailed_roadmap.md
src/: connection.rs  debugger.rs  lib.rs  main.rs
src/client/: connection.rs
src/debugger/: call_stack.rs  context.rs  core.rs  handler.rs  handlers.rs  log.rs  mod.rs  state.rs  vm.rs
src/debugger/context/: readable_sierra_ids.rs
src/debugger/handler/: stack_trace.rs
