[package]
name = "cairo-debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
dap = { git = "https://github.com/software-mansion-labs/dap-rs", rev = "4440a6f" }
cairo-vm = { git = "https://github.com/software-mansion-labs/cairo-vm", rev = "e8183f4" }
cairo-annotations = { version = "0.7.0", features = ["cairo-lang"] }
cairo-lang-sierra = "2.12.3"
camino = "1.2"
scarb-metadata = "1"
serde_json = "1"
tracing = "0.1"
anyhow = "1.0"
