[package]
name = "cairo-debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
dap = { git = "https://github.com/software-mansion-labs/dap-rs", rev = "d26a3005fc37bb5127734dbfb0d8cadb6d5ca14b" }
cairo-vm = { git = "https://github.com/software-mansion-labs/cairo-vm", rev = "4675b55df938162dbefb546242bafaf7d2d51efd", features = ["test_utils"] }
cairo-annotations = { version = "0.7.0", features = ["cairo-lang"] }
cairo-lang-sierra = "2.12.3"
scarb-metadata = "1"
serde_json = "1"
tracing = "0.1"
anyhow = "1.0"
starknet-types-core = "0.2.4"
